# SmartGuard-Vision

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  smartguard_vision.db  start-all.bat  start-all.ps1  start-all.sh
.github/workflows/: ci.yml
SmartGuard-Vision-Fron/: README.md  index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
SmartGuard-Vision-Fron/src/: App.vue  main.js
SmartGuard-Vision-Fron/src/api/: dashboard.ts
SmartGuard-Vision-Fron/src/composables/: useClock.js  useRecordHistory.js
SmartGuard-Vision-Fron/src/constants/: navigation.ts
alembic/: env.py
alembic/versions/: 20260423_0001_initial_schema.py
app/: __init__.py  main.py
app/api/: deps.py  router.py
app/core/: config.py  database.py  security.py
app/models/: __init__.py  alert.py  alert_action.py  audit_log.py  auth_refresh_token.py  auth_revoked_token.py  device.py  rule_config.py  sensor_record.py  user.py  vision_record.py
app/schemas/: alert.py  alert_action.py  audit.py  auth.py  dashboard.py  device.py  health.py  pagination.py  response.py  rule.py  sensor_record.py  vision_record.py
app/services/: alert_service.py  audit_service.py  auth_service.py  bootstrap_service.py  dashboard_service.py  device_service.py  rule_service.py  sensor_service.py  vision_service.py
app/utils/: response.py
docker/: backend.Dockerfile  frontend.Dockerfile  nginx.conf
server/: package-lock.json  package.json  tsconfig.json
server/src/: app.ts  index.ts
tests/: test_auth_and_permissions.py
(+63 files in other folders)
